Changed color scheme & changed element orientation

--- a/ToDoList-Code/index.html
+++ b/ToDoList-Code/index.html
@@ -11,7 +11,7 @@
 <body>
 	
 	<header>
-		<h1>Task List 2021</h1>
+		<h1><b>Task List 2021</b></h1>
 		<form id="new-task-form">
 			<input 
 				type="text" 
@@ -27,7 +27,7 @@
 	<main>
 		<section class="task-list">
 			<div id="tasks">
-                <h2>Tasks:</h2>
+                <h2><b>Tasks:</b></h2>
                 <!--
                 <div class="task">
 					<div class="content">
